# opus-rust

./: LICENSE  README.md
move-generation/: Cargo.toml  README.md  batch_move_gen.py  build.rs  example_positions.json  perf_test.py  pref-full.py  sample_usage.py  stress_test.pgn  stress_test.py  stress_test_native.py  validate_with_pychess.py
move-generation/f/: pyvenv.cfg
move-generation/src/: lib.rs  move_gen.rs  pgn.rs  rules.rs  types.rs
move-generation/tests/: board_functionality_tests.rs  move_gen_tests.rs
