[package]
name = "move_generation"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.21", features = ["extension-module"] }

[package.metadata.maturin]
name = "move_generation"
[build-dependencies]
pyo3-build-config = "0.21"

[lib]
crate-type = ["cdylib"]
